[package]
name = "polkadot-rpc"
version = "0.9.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server"] }
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
txpool-api = { package = "sc-transaction-pool-api", git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
beefy-gadget-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
