[package]
name = "polkadot-client"
version = "0.9.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-core-primitives = { path = "../../core-primitives" }
polkadot-primitives = { path = "../../primitives" }
polkadot-node-core-parachains-inherent = { path = "../core/parachains-inherent" }
polkadot-runtime-common = { path = "../../runtime/common" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
runtime-metrics = [
    "rococo-runtime/runtime-metrics",
    "kusama-runtime/runtime-metrics",
    "westend-runtime/runtime-metrics",
    "polkadot-runtime/runtime-metrics",
]
