[package]
name = "polkadot-runtime-parachains"
version = "0.9.29"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
parity-scale-codec = { version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
log = { version = "0.4.17", default-features = false }
rustc-hex = { version = "2.1.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", features = [ "derive" ], optional = true }
derive_more = "0.99.17"
bitflags = "1.3.2"

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true , branch = "oty-fix-scheduler-migration" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "oty-fix-scheduler-migration" }
sp-tracing = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "oty-fix-scheduler-migration" }

pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "oty-fix-scheduler-migration" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "oty-fix-scheduler-migration" }

xcm = { package = "xcm", path = "../../xcm", default-features = false }
xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }

rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
static_assertions = { version = "1.1.0", optional = true }
polkadot-runtime-metrics = { path = "../metrics", default-features = false}

[dev-dependencies]
futures = "0.3.21"
hex-literal = "0.3.4"
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../primitives/test-helpers"}
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "oty-fix-scheduler-migration" }
thousands = "0.2.0"
assert_matches = "1"

[features]
default = ["std"]
no_std = []
std = [
	"bitvec/std",
	"parity-scale-codec/std",
	"rustc-hex/std",
	"scale-info/std",
	"serde",
	"primitives/std",
	"inherents/std",
	"sp-core/std",
	"sp-api/std",
	"sp-keystore",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-timestamp/std",
	"pallet-vesting/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
	"log/std",
	"polkadot-runtime-metrics/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"static_assertions",
	"sp-application-crypto",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-session/try-runtime",
	"pallet-staking/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-vesting/try-runtime",
]
runtime-metrics = ["sp-tracing/with-tracing", "polkadot-runtime-metrics/runtime-metrics"]
vstaging = []
